# langchain-genai

./: .env  .env.example  README.md  dockerfile  pyproject.toml
langchain_genai/: basics_langchain.py  chatbot.ipynb  chatbot.py  check_rep.py  llm_app.py  main.py  serve.py
